--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ a:visited {
 
 .profile-banner {
   height: 410px;
- background-image: url("https://learn-verified.s3.amazonaws.com/banner-photo-placeholder.png");
+ background-image: url("http://s-blais.com/assets/westonlog.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -252,7 +252,7 @@ a:visited {
 }
 
 .profile-photo {
- background-image: url("https://learn-verified.s3.amazonaws.com/profile-photo-placeholder.png");
+ background-image: url("http://s-blais.com/assets/deskpic.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
